<resources>
    <string name="error_motor_blocked">Motor Blocked!</string>
    <string name="check_motor_blocked">Check motor and bike transimssion</string>
    <string name="error_torque_sensor">Torque sensor error!</string>
    <string name="check_torque_sensor">Take your feet off the pedals and restart the bike</string>
    <string name="error_low_voltage">Battery low voltage!</string>
    <string name="check_low_voltage">Check battery voltage or battery configuration parameters</string>
    <string name="error_high_voltage">Battery overvoltage!</string>
    <string name="check_high_voltage">Check battery voltage or battery configuration parameters</string>
    <string name="error_limit_temperature">Warning temperature</string>
    <string name="check_limit_temperature">The motor power is limited</string>
    <string name="error_stop_temperature">Stop temperature!</string>
    <string name="check_stop_temperature">Turn off the bike and wait for it to cool down</string>
    <string name="dash">-</string>
    <string name="calibration">Cal</string>
    <string name="app_name">TSDZ2_SW102</string>
    <string name="status_data">STATUS DATA</string>
    <string name="debug_data">DEBUG DATA</string>
    <string name="trip_data">TRIP STATS</string>
    <string name="btSetup">Setup Bluetooth</string>
    <string name="alwaysOn">Screen Always ON</string>
    <string name="config">Bike Configuration</string>
    <string name="title_activity_bluetooth_setup">Bluetooth Setup</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="choose">Choose</string>
    <string name="selectedDevice">Selected Device</string>
    <string name="discoveredDevices">Discovered Devices</string>
    <string name="scan">Scan</string>
    <string name="noDeviceSelected">No device selected</string>
    <string name="notification_title">Bike Connection</string>
    <string name="speed">Speed</string>
    <string name="cadence">Cadence</string>
    <string name="motor_power">Motor Power</string>
    <string name="pedal_power">Pedal Power</string>
    <string name="battery_current">Battery Current</string>
    <string name="voltage">Battery Volt</string>
    <string name="motor_temp">Motor Temp.</string>
    <string name="energy_used">Battery used</string>
    <string name="speedField">%.1f km/h</string>
    <string name="cadenceField">%1$d rpm</string>
    <string name="powerField">%1$d W</string>
    <string name="currentField">%.1f A</string>
    <string name="voltageField">%.1f V</string>
    <string name="temperatureField">%1$d °C</string>
    <string name="AvgWhField">%.2f wh/km</string>
	<string name="weightField">%.1f kg</string>
	<string name="whField">%1$d wh</string>
	<string name="distanceField">%.2f km</string>
    <string name="rangeField">%.1f km</string>
    <string name="duty_cycle">Duty Cycle %</string>
    <string name="motor_erps">Motor ERPS:</string>
    <string name="foc_angle">FOC Angle</string>
    <string name="torque_adc">Torque ADC</string>
    <string name="pedal_torque">Pedal Torque</string>
    <string name="fw_offset">FW offset</string>
    <string name="battery_energy_h_km">Avg. Battery Consum</string>
    <string name="adc_value">ADC value</string>
    <string name="pedal_weight">Pedal Weight</string>
    <string name="fw_hall_offset">FW Hall Offset</string>
    <string name="tsdz_cfg">Bike Configuration</string>
    <string name="error">Error</string>
    <string name="system">System</string>
    <string name="battery">Battery</string>
    <string name="assist_levels">Assist Levels</string>
    <string name="temp_control">Temperature and Throttle</string>
    <string name="cadence_calib">Cadence sensor calibration</string>
    <string name="torque_calib">Torque sensor calibration</string>
    <string name="hall_calib">Hall calibration</string>
    <string name="title_activity_system_setup">System Setup</string>
    <string name="warning">Warning</string>
    <string name="motor">Motor</string>
    <string name="motor_type">Motor Type</string>
    <string name="acceleration">Acceleration</string>
    <string name="max_current">Max current (A)</string>
    <string name="max_power">Max Power (W)</string>
    <string name="sensors">Sensors</string>
    <string name="wheel_cruise">Wheel/Speed Limit/Walk/Cruise</string>
    <string name="light">Light</string>
    <string name="light_config">Lights Configuration</string>
    <string name="adv_cad_mode">Cadence sensor\nAdvanced mode</string>
    <string name="torque_sensor_calib">Torque Sensor Calibration</string>
    <string name="high_percent">High %</string>
    <string name="torque_adc_step">Torque sensor ADC step</string>
    <string name="threshold">0-cadence assist threshold</string>
    <string name="street_mode">Street Mode</string>
    <string name="cruise_mode_enabled">Cruise mode enabled</string>
    <string name="walk_mode_enabled">Walk/Cruise mode enabled</string>
    <string name="street_mode_throttle">Throttle enabled</string>
    <string name="wheel_perimeter">Wheel perim. (mm)</string>
    <string name="range_error">Value must be between %1$d and %2$d</string>
    <string name="write_cfg_error">Configuration cannot be updated</string>
    <string name="read_cfg_error">Configuration cannot be readed</string>
    <string name="pairing_error">Pairing failed</string>
    <string name="pairing_done">Pairing done</string>
    <string name="connection_error">Bike is not connected</string>
    <string name="title_activity_battery_setup">Battery Setup</string>
    <string name="wh_reset_volt">Wh counter reset voltage (Vx10)</string>
    <string name="volt_cut_off">Battery low Voltage Cut-Off (Vx10)</string>
    <string name="battery_resist">Battery pack Resistance (mOhm)</string>
    <string name="battery_total_wh">Battery pack Total Wh</string>
    <string name="battery_used_wh">Battery pack Used Wh</string>
    <string name="soc_type">SOC display type</string>
    <string-array name="soc_types">
        <item> disable </item>
        <item> time </item>
        <item> SOC % </item>
        <item> SOC Volt </item>
    </string-array>
    <string name="title_activity_levels_setup">Assist levels Setup</string>
    <string name="level_error">Assist levels not incremental</string>
    <string name="eMTB_mode">eMTB Mode</string>
	<string name="eMTB_mode_level">eMTB Mode level</string>
    <string name="power_mode">POWER MODE</string>
    <string name="power_assist_level_1">Power assist level 1</string>
    <string name="power_assist_level_2">Power assist level 2</string>
    <string name="power_assist_level_3">Power assist level 3</string>
    <string name="power_assist_level_4">Power assist level 4</string>
	<string name="power_assist_level_5">Power assist level 5</string>
    <string name="walk_mode">Walk Mode</string>
    <string name="walk_assist_level_1">Walk assist level 1</string>
    <string name="walk_assist_level_2">Walk assist level 2</string>
    <string name="walk_assist_level_3">Walk assist level 3</string>
    <string name="walk_assist_level_4">Walk assist level 4</string>
	<string name="walk_assist_level_5">Walk assist level 5</string>
    <string name="title_activity_temperature_setup">Temperature control Setup</string>
    <string name="temp_control_title">Temperature Control</string>
    <string name="control_type">Control Type</string>
    <string name="warning_temp">Warning Temp</string>
    <string name="stop_temp">Shutoff Temp</string>
    <string name="throttle_control">Throttle Control</string>
    <string name="throttle_enabled">Throttle Enabled</string>
	<string name="title_activity_torque_sensor_setup">Torque Sensor Setup</string>
    <string name="torque_sensor_kg">Torque Sensor KG value</string>
    <string name="torque_sensor_adc">Torque Sensor ADC value</string>
    <string name="commandError">Command not recognized</string>
    <string name="btUpdateSpeed">BT update speed</string>
    <string name="logLevel">Log Level</string>
    <string name="enable_wifi">Wifi is disabled\nEnable Wifi and try again</string>
    <string name="cannot_change_pin">Image is signed\n cannot change BT PIN %1$d</string>
    <string name="wrong_app_name">Bin image App Name is wrong</string>
    <string name="pin_change">Image BT Pin is %1$d\ndo you want to change it? </string>
    <string name="bt_pin_input">Insert the new BT Pin (6 digits) </string>
    <string name="image_update_error">Error updating bin image</string>
    <string name="pin_input_error">PIN is empty</string>
    <string name="title_activity_chart">Charts</string>
    <string name="assistLevel">Assist Level</string>
    <string name="assist_mode">Assist Mode</string>
    <string-array name="motor_types">
        <item> 48V </item>
        <item> 36V </item>
    </string-array>
 <string name="hal_n">Hall state</string>
    <string name="hal_1">4</string>
    <string name="hal_2">6</string>
    <string name="hal_3">2</string>
    <string name="hal_4">3</string>
    <string name="hal_5">1</string>
    <string name="hal_6">5</string>
    <string name="angle">ΔΦ (deg)</string>
    <string name="offset">ΔT (4us)</string>
    <string name="r_2">R2</string>
    <string name="warning_cfg">Dont\'change these values unless you know well what are you doing!</string>
    <string name="phase_angle">Phase Angle adjust</string>
    <string name="phase_angle_unit">Circle/256</string>
    <string name="hall_offset_unit">4us/unit</string>
    <string name="hall_offset">Hall Offset adjust</string>
    <string name="motorTestStartError">Cannot start motor test</string>
    <string name="motorTestStopError">Cannot stop motor test</string>
    <string name="exitMotorRunningError">Motor is running\nStop test then exit</string>
    <string name="calibrationSaveError">Calibration data NOT saved</string>
    <string name="calibrationApplied">Calibration data applied</string>
    <string name="calibrationDataValid">Calibration ended.\nPress \'SAVE\' to apply the calibration data</string>
    <string name="calibrationDataNotValid">Calibration data NOT valid.\nRetry the calibration procedure</string>
    <string name="warningMotorStart">Rise te rear wheel or remove the chain.\nThe motor will start spinning!</string>
    <string name="cfgReadError">Error reading configuration data</string>
    <string name="cfgSaved">Configuration data Saved</string>
    <string name="cfgSaveError">Error saving configuration data</string>
    <string name="motorTuning">Motor Tuning</string>
    <string name="valuesNotChanged">Values not changed</string>
    <string name="setDefaultValues">Set Default Values</string>
    <string name="hallAngles">Angles (circle/256):</string>
    <string name="hallOffset">Offsets (4us/unit):</string>
    <string name="start_stop">Start/Stop</string>
    <string name="loadDefault">Load Default</string>
    <string name="motorTuningHelp">Phase Angle: full circle=256\nHall: 4us/step</string>
    <string name="defaultLoaded">Default value loaded.\nPress \'SAVE\' to apply the default data</string>
    <string-array name="ligths_cfg">
        <item> Solid - Off</item>
        <item> Flashing - Off</item>
        <item> Solid - (Flashing)</item>
        <item> Flashing - (Flashing)</item>
        <item> Solid - (On)</item>
        <item> Solid - On</item>
        <item> Solid - Flashing</item>
        <item> Flashing - On</item>
        <item> Flashing - Flashing</item>
    </string-array>
    <string-array name="temperature_types">
        <item> None </item>
        <item> Controller ADC </item>
    </string-array>
    <string-array name="units_types">
        <item> SI </item>
        <item> Imperial </item>
    </string-array>
</resources>